2008-02-05  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Some work around areas paint.
    
    * src/ccm-drawable.c:
    * src/ccm-window.c: Fix crash on get geometry on resize.

    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-pixmap-shm.c: Fix crash if ccm can't create SHM ressource.
    
2008-02-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c: Clip with damaged screen areas on shade draw.
                                   Create mosaic areas on each screen paint.
                                   
    * src/ccm-screen.c: Don't manage metacity allow event window.

2008-02-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac:
    * plugins/Makefile.am:
    * plugins/mosaic/Makefile.am:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/mosaic/ccm-mosaic.h:
    * plugins/mosaic/ccm-mosaic.plugin.desktop.in:
    * plugins/mosaic/ccm-mosaic.schemas.in: First implementation of mosaic 
                                            plugin.
    
    * src/ccm-pixmap-buffered-shm.c: Fix redraw when disable/enable buffering
                                     pixmap.
                                     
    * src/ccm.h:
    * src/ccm-screen.c: Add ccm_screen_set_filtered_damage which provide the 
                        possibility to disable/enable the refresh of obscured
                        area of window.
                        
    * src/ccm.h:
    * src/ccm-window.c: Add ccm_window_make_input_output function.
    
2008-02-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c: Remove refresh rate check on paint
    
2008-01-31  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-window.c: Fix offset of clipping when drawing in magnifier surface
                        Clip screen when drawing shade desktop.